# mynx

./: pyproject.toml
mynx/callbacks/: callback.py
mynx/modules/seq/: __init__.py  attention.py
