[tool.poetry]
name = "mynx"
version = "0.12.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flax = "^0.10.1"
jax = {extras = ["cuda12"], version = "^0.4.35"}
einops = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
